--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					Saya akan meberikan informasi tentang identitas diri <br>
 					
 				</p>
-				<a href="resume.html" class="btn btn-primary mt-5 text-white rounded-0" style="width: 40%">
+				<a href="Resume.html" class="btn btn-primary mt-5 text-white rounded-0" style="width: 40%">
 					Lihat Detail
 				</a>
 			</div>
